# comptonDet

./: .gitignore  CMakeLists.txt  README.md  exampleB4d.cc  runPolDet.mac
include/: EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
rootScripts/: photonDetAna.C
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
